# empireporter

./: Cargo.toml  LICENSE  NOTICE  README.md  build.rs  index.html  robots.txt  sitemap.xml
assets/: README.md
reference/: civ_share.py  empire_porter_reference.py  user_empire_designs_v3.4.txt
src/: io_ops.rs  main.rs  parser.rs
